--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -28,7 +28,7 @@
     "---\n",
     "In this example, we used a simple 2D nonlinear dynamical system model. The state of the agent, $x$, is defined as:\n",
     "$$\n",
-    "\\mathsf{x} = \n",
+    "x = \n",
     "\\begin{pmatrix} \n",
     "x & y & \\theta\n",
     "\\end{pmatrix}^T\n",
@@ -47,7 +47,7 @@
     "---\n",
     "The (nonlinear) dynamics of motion model is given in the standard state-space form:\n",
     "$$\n",
-    "x_t = A~x_{t-1} + B~u_t\n",
+    "x_t = Ax_{t-1} + Bu_t\n",
     "$$\n",
     "where\n",
     "$$\n",
@@ -62,8 +62,8 @@
     "$$\n",
     "B = \n",
     "\\begin{pmatrix}\n",
-    "    \\Delta t~\\cos{\\theta} & 0\\\\\n",
-    "    \\Delta t~\\sin{\\theta} & 0\\\\\n",
+    "    \\Delta t \\cos{\\theta} & 0\\\\\n",
+    "    \\Delta t \\sin{\\theta} & 0\\\\\n",
     "    0 & \\Delta t\n",
     "\\end{pmatrix}\n",
     "$$\n",
@@ -78,19 +78,24 @@
     "$$\n",
     "\\begin{split}\n",
     "    \\bar{\\mu}_t &= g(u_t, \\mu_{t-1}) \\\\\n",
-    "    &= A \\mu_{t-1} + F_x^T \\left( B~u_t \\right)\n",
+    "    &= Fx^T A \\mu_{t-1} + F_x^T \\left( B u_t \\right) \\\\\n",
     "    &= \n",
-    "    \\begin{pmatrix}\n",
-    "        1&0&0\\\\\n",
-    "        0&1&0\\\\\n",
-    "        0&0&1\\\\\n",
-    "    \\end{pmatrix}\n",
     "    \\mu_{t-1} + F_x^T \n",
     "    \\begin{pmatrix}\n",
-    "        1&0&0\\\\\n",
-    "        0&1&0\\\\\n",
-    "        0&0&1\\\\\n",
+    "        \\Delta t \\cos{\\theta} & 0\\\\\n",
+    "        \\Delta t \\sin{\\theta} & 0\\\\\n",
+    "        0 & \\Delta t\n",
     "    \\end{pmatrix}\n",
+    "    \\begin{pmatrix} \n",
+    "    v_t \\\\\n",
+    "    \\omega_t\n",
+    "    \\end{pmatrix} \\\\\n",
+    "    &= \\mu_{t-1} + F_x^T\n",
+    "    \\begin{pmatrix}\n",
+    "        v_t \\Delta t \\cos{\\theta}\\\\\n",
+    "        v_t \\Delta t \\sin{\\theta}\\\\\n",
+    "        \\omega_t \\Delta t\n",
+    "    \\end{pmatrix}    \n",
     "\\end{split}\n",
     "$$\n",
     "    where\n",
@@ -102,15 +107,7 @@
     "  0&0&1 & 0\\cdots0 \\\\\n",
     " \\end{pmatrix}\n",
     "$$\n",
-    "    is an utility matrix that helps map $B~u_t$ to the same shape as $\\mu$\n",
-    "\n",
-    "$$\n",
-    "\\begin{pmatrix}\n",
-    "    1&0&0 & 0\\cdots0 \\\\\n",
-    "    0&1&0 & 0\\cdots0 \\\\\n",
-    "    0&0&1 & 0\\cdots0 \\\\\n",
-    "\\end{pmatrix}\n",
-    "$$\n",
+    "    is an utility matrix that helps map matrices to the same shape as $\\mu$\n",
     "\n",
     "---\n",
     "We define actual agent's state as $x$, and use $y$ to denote the combined feature:\n",
@@ -129,7 +126,7 @@
     "    m_{2,x} & m_{2,y} & 0\\\\\n",
     "    \\cdots & \\cdots & \\cdots \\\\\n",
     "    m_{N,x} & m_{N,y} & 0\\\\\n",
-    "\\end{pmatrix} \\\\\n",
+    "\\end{pmatrix}\n",
     "\\end{split}\n",
     "$$\n",
     "where $m$ denotes the landmarks observed so far and $N$ is the total number of landmarks.\n",
