--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -108,6 +108,9 @@
     " \\end{pmatrix}\n",
     "$$\n",
     "    is an utility matrix that helps map matrices to the same shape as $\\mu$\n",
+    "$$\n",
+    "\\bar{\\Sigma}_t = G_t \\Sigma+{t-1} G_t^T + F_x^T R_t F_x\n",
+    "$$\n",
     "\n",
     "---\n",
     "We define actual agent's state as $x$, and use $y$ to denote the combined feature:\n",
