--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -70,11 +70,9 @@
     "is the state (or system) matrix and input matrix, respectively.\n",
     "\n",
     "---\n",
-    "The Kalman filter is a two phase process. First we predict the new state based on our internal motion model and then update the predicted with the information brought by the new measurement and compute the best state estimation by weighting between predicted and inferred state according to the Kalman gain.\n",
+    "The Kalman filter is a two step process. First we predict the new state based on our internal motion model. Then we update the predicted state and its covariance with the information brought by the new measurement and compute the best state estimation by weighting between predicted and inferred state according to the Kalman gain.\n",
     "\n",
-    "The prediction phase can be best described below:\n",
-    "\n",
-    "    1. Motion update:\n",
+    "1. Prediction step:\n",
     "$$\n",
     "\\begin{split}\n",
     "    \\bar{\\mu}_t &= g(u_t, \\mu_{t-1}) \\\\\n",
@@ -109,10 +107,32 @@
     "$$\n",
     "    is an utility matrix that helps map matrices to the same shape as $\\mu$\n",
     "$$\n",
-    "\\bar{\\Sigma}_t = G_t \\Sigma+{t-1} G_t^T + F_x^T R_t F_x\n",
+    "\\bar{\\Sigma}_t = G_t \\Sigma_{t-1} G_t^T + F_x^T R_t^x F_x\n",
     "$$\n",
+    "    where \n",
+    "$$\n",
+    "\\begin{split}\n",
+    "G_t &= \\frac{\\partial}{\\partial x} g(u_t, x_t) \\\\\n",
+    "&= \\frac{\\partial}{\\partial x} \\left( A_t x_{t-1} + B_t u_t \\right) \\\\\n",
+    "&= A_t + \\frac{\\partial}{\\partial x} \\left( B_t u_t \\right) \\\\\n",
+    "&= I + F_x^T g_t F_x\n",
+    "&= \n",
+    "\\end{split}\n",
+    "$$\n",
+    "    is the Jacobian of the (non-linear) motion function, and\n",
+    "$$\n",
+    "g_t = \\frac{\\partial}{\\partial x} \\left( B_t u_t \\right)\n",
+    "$$\n",
+    "    is one of the two nonlinear functions $g(u_t, x_{t-1})$ and $h(x_t)$ locally linearized through first-order Taylor expansion:\n",
+    "$$\n",
+    "g(u_t, y_{t-1}) \\approx g(u_t, \\mu_{t-1}) + G_t(y_{t-1} - \\mu_{t-1})\n",
+    "$$\n",
+    "    Prediction phase done!\n",
+    "2. Update step:\n",
+    "The Kalman gain $K_t$ helps balance between the prior information carried from the predicted state using motion model and the inferred state from the Bayes update. It weights the \n",
     "\n",
     "---\n",
+    "\n",
     "We define actual agent's state as $x$, and use $y$ to denote the combined feature:\n",
     "$$\n",
     "\\begin{split}\n",
@@ -133,25 +153,6 @@
     "\\end{split}\n",
     "$$\n",
     "where $m$ denotes the landmarks observed so far and $N$ is the total number of landmarks.\n",
-    "\n",
-    "---\n",
-    "In EKF, the two nonlinear functions $g(u_t, x_{t-1})$ and $h(x_t)$ are locally linearized through first-order Taylor expansion:\n",
-    "$$\n",
-    "g(u_t, y_{t-1}) \\approx g(u_t, \\mu_{t-1}) + G_t(y_{t-1} - \\mu_{t-1})\n",
-    "$$\n",
-    "where \n",
-    "$$\n",
-    "\\begin{split}\n",
-    "G_t &= \\frac{\\partial}{\\partial x} g(u_t, x_t) \\\\\n",
-    "&= \\frac{\\partial}{\\partial x} \\left( A_t x_{t-1} + B_t u_t \\right) \\\\\n",
-    "&= A_t + \\frac{\\partial}{\\partial x} \\left( B_t u_t \\right) \\\\\n",
-    "&= I + F_x^T g_t F_x\n",
-    "\\end{split}\n",
-    "$$\n",
-    "is the Jacobian of the (non-linear) motion function, and\n",
-    "$$\n",
-    "g_t = \\frac{\\partial}{\\partial x} \\left( B_t u_t \\right)\n",
-    "$$\n",
     "\n",
     "---\n",
     "$$\n",
