--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -129,7 +129,7 @@
     "$$\n",
     "    Prediction phase done!\n",
     "2. Update step:\n",
-    "The Kalman gain $K_t$ helps balance between the prior information carried from the predicted state using motion model and the inferred state from the Bayes update. It weights the \n",
+    "The Kalman gain $K_t$ helps balance between the prior information carried from the predicted state using motion model and the inferred state from the Bayes update. It computes the weighted average between the two quantities and use that to update the final state for returning.\n",
     "\n",
     "---\n",
     "\n",
