wip: EKF update step

--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -129,7 +129,17 @@
     "$$\n",
     "    Prediction phase done!\n",
     "2. Update step:\n",
-    "The Kalman gain $K_t$ helps balance between the prior information carried from the predicted state using motion model and the inferred state from the Bayes update. It computes the weighted average between the two quantities and use that to update the final state for returning.\n",
+    "    The Kalman gain $K_t$ balances between the prior information carried from the predicted state using motion model ($\\bar{\\mu}_t$) and the inferred state from the new measurements. Finally we computes the weighted average between the two quantities and use that to update the final state for return.\n",
+    "    \n",
+    "    The measurement of the sensor is defined as:\n",
+    "$$\n",
+    "z_t^i = \n",
+    "\\begin{pmatrix}\n",
+    "    r_t^i \\\\\n",
+    "    \\phi_t^i\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "    where $z_t^i$ denotes sensor's measurement of `i-th` landmark at time $t$ and $r, \\phi$ is the range-bearing observation.\n",
     "\n",
     "---\n",
     "\n",
