--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -70,6 +70,25 @@
     "is the state (or system) matrix and input matrix, respectively.\n",
     "\n",
     "---\n",
+    "The fundation of the Kalman filter is Bayesian filter where the posterior belief will be updated by the likelihood and a prior belief. In the Kalman filter, the belief is represented by two variables $\\mu$ and $\\Sigma$ which denotes the mean and covariance of the state. They are given by:\n",
+    "$$\n",
+    "\\mu = \n",
+    "\\begin{pmatrix}\n",
+    "    x \\\\\n",
+    "    m\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "and \n",
+    "$$\n",
+    "\\Sigma = \n",
+    "\\begin{pmatrix}\n",
+    "    \\Sigma_{xx} & \\Sigma_{xm} \\\\\n",
+    "    \\Sigma_{mx} & \\Sigma_{mm}\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "where $x$ and $m$ denotes the agent's state and landmakrs, respectively.\n",
+    "\n",
+    "---\n",
     "The Kalman filter is a two step process. First we predict the new state based on our internal motion model. Then we update the predicted state and its covariance with the information brought by the new measurement and compute the best state estimation by weighting between predicted and inferred state according to the Kalman gain.\n",
     "\n",
     "1. Prediction step:\n",
@@ -116,7 +135,6 @@
     "&= \\frac{\\partial}{\\partial x} \\left( A_t x_{t-1} + B_t u_t \\right) \\\\\n",
     "&= A_t + \\frac{\\partial}{\\partial x} \\left( B_t u_t \\right) \\\\\n",
     "&= I + F_x^T g_t F_x\n",
-    "&= \n",
     "\\end{split}\n",
     "$$\n",
     "    is the Jacobian of the (non-linear) motion function, and\n",
@@ -131,7 +149,7 @@
     "2. Update step:\n",
     "    The Kalman gain $K_t$ balances between the prior information carried from the predicted state using motion model ($\\bar{\\mu}_t$) and the inferred state from the new measurements. Finally we computes the weighted average between the two quantities and use that to update the final state for return.\n",
     "    \n",
-    "    The measurement of the sensor is defined as:\n",
+    "    The range-bearing observation from the sensor is represented by:\n",
     "$$\n",
     "z_t^i = \n",
     "\\begin{pmatrix}\n",
@@ -139,7 +157,26 @@
     "    \\phi_t^i\n",
     "\\end{pmatrix}\n",
     "$$\n",
-    "    where $z_t^i$ denotes sensor's measurement of `i-th` landmark at time $t$ and $r, \\phi$ is the range-bearing observation.\n",
+    "    where $z_t^i$ denotes sensor's $i$-th measurement at time $t$ and $r, \\phi$ is the range-bearing observation. When we see a new landmark that has never been observed before, we will use the range-bearing observation and our current state estimate to compute an estimated landmark location $\\bar{\\mu}_j$. If the landmark has been observed before, we will use our current estimate of the landmark's location $$ and agent's location stored in the state matrix $x$ to compute the expected range-bearing observation at time $t$ for landmark $i$: $z_t^i$.\n",
+    "   \n",
+    "$$\n",
+    "\\begin{pmatrix}\n",
+    "    \\bar{\\mu}_{j,x} \\\\\n",
+    "    \\bar{\\mu}_{j,y}\n",
+    "\\end{pmatrix}\n",
+    "= \n",
+    "\\begin{pmatrix}\n",
+    "    \\bar{\\mu}_{t,x} \\\\\n",
+    "    \\bar{\\mu}_{t,y}\n",
+    "\\end{pmatrix}\n",
+    "+\n",
+    "\\begin{pmatrix}\n",
+    "    r_t^i \\cos{\\phi_t^i +\\bar{\\mu}_{t, \\theta}} \\\\\n",
+    "    r_t^i \\sin{\\phi_t^i +\\bar{\\mu}_{t, \\theta}}\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "    \n",
     "\n",
     "---\n",
     "\n",
@@ -363,6 +400,10 @@
     "        return n\n",
     "\n",
     "    def get_landmark_pos(self, x, z):\n",
+    "        '''\n",
+    "        Compute landmark position from range-bearing measurement\n",
+    "        and current agent's state estimate\n",
+    "        '''\n",
     "        zp = np.zeros((2, 1))\n",
     "        zp[0, 0] = x[0, 0] + z[0, 0] * np.cos(x[2, 0] + z[0, 1])\n",
     "        zp[1, 0] = x[1, 0] + z[0, 0] * np.sin(x[2, 0] + z[0, 1])\n",
@@ -378,9 +419,9 @@
     "        return (angle + np.pi) % (2 * np.pi) - np.pi\n",
     "\n",
     "    def search_landmark_id(self, xAug, PAug, zi):\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        Find and return the landmark that minimizes the Mahalanobis distance from the agent\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        nLM = self.count_landmarks(xAug)\n",
     "        min_dist = self.m_dist_threshold\n",
     "        min_idx = nLM\n",
