wip plot the covariance circles

--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -265,7 +265,7 @@
     "    time_sim = 50.0   # total simulation time [s]\n",
     "    ndim_state = 3    # state dimension [x, y, yaw]\n",
     "    ndim_landmark = 2 # Landmark state dimension [x, y]\n",
-    "    sensor_max_range = 20.0 # maximum observation range of the simulated sensor\n",
+    "    sensor_max_range = 10.0 # maximum observation range of the simulated sensor\n",
     "    m_dist_threshold = 1.0  # Threshold of Mahalanobis distance for data association.\n",
     "\n",
     "    # EKF state covariance\n",
@@ -299,6 +299,8 @@
     "            self.line_lm, = plt.plot(self.landmarks[:, 0], self.landmarks[:, 1], \"*k\", **marker_config)\n",
     "            # plot estimated of agent's location\n",
     "            self.line_x_hat, = plt.plot(0, 0, \".r\", **marker_config)\n",
+    "            # plot detection range\n",
+    "            self.circle_x = plt.Circle([0,0], 0, '')\n",
     "            # plot estimated landmarks\n",
     "            self.line_lm_hat = []\n",
     "            for i in range(self.landmarks.shape[0]):\n",
