updated EKF derivation

--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -61,6 +61,7 @@
     "\n",
     "---\n",
     "The fundation of the Kalman filter is Bayesian filter where the posterior belief will be updated by the likelihood and a prior belief. In the Kalman filter, the belief is represented by two variables $\\mu$ and $\\Sigma$ which denotes the first (mean) and second (covariance) moment of the probabilistic density representation of the system state. They are given by:\n",
+    "\n",
     "$$\n",
     "\\mu = \n",
     "\\begin{pmatrix}\n",
@@ -147,8 +148,7 @@
     "    \\phi_t^i\n",
     "\\end{pmatrix}\n",
     "$$\n",
-    "    where $z_t^i$ denotes sensor's $i$-th measurement at time $t$ and $r, \\phi$ is the range-bearing observation. When we see a new landmark that has never been observed before, we will use the range-bearing observation and our current state estimate to compute an estimated landmark location $\\bar{\\mu}_j$. If the landmark has been observed before, we will use our current estimate of the landmark's location $$ and agent's location stored in the state matrix $x$ to compute the expected range-bearing observation at time $t$ for landmark $i$: $z_t^i$.\n",
-    "   \n",
+    "    where $z_t^i$ denotes sensor's $i$-th measurement at time $t$ and $r, \\phi$ is the range-bearing observation. When we see a new landmark that has never been observed before, we will use the range-bearing observation and our current state estimate to compute an estimated landmark location $\\bar{\\mu}_j$. If the landmark has been observed before, we will use our current estimate of the landmark $j$'s location $\\bar{\\mu}_j$ and agent's location $\\bar{\\mu}_t$ stored in the state matrix $x$ to compute the expected range-bearing observation at time $t$ for landmark $i$: $z_t^i$.\n",
     "$$\n",
     "\\begin{pmatrix}\n",
     "    \\bar{\\mu}_{j,x} \\\\\n",
@@ -161,10 +161,49 @@
     "\\end{pmatrix}\n",
     "+\n",
     "\\begin{pmatrix}\n",
-    "    r_t^i \\cos{\\phi_t^i +\\bar{\\mu}_{t, \\theta}} \\\\\n",
-    "    r_t^i \\sin{\\phi_t^i +\\bar{\\mu}_{t, \\theta}}\n",
+    "    r_t^i \\cos{\\left( \\phi_t^i +\\bar{\\mu}_{t, \\theta} \\right)} \\\\\n",
+    "    r_t^i \\sin{\\left( \\phi_t^i +\\bar{\\mu}_{t, \\theta} \\right)}\n",
     "\\end{pmatrix}\n",
-    "$$ \n",
+    "$$\n",
+    "    The equation above provids a way to:    \n",
+    "    1. either use actual range-bearing measurement $r$, $\\phi$ to imate the location of the corresponding the landmark or;\n",
+    "    2. use current estimated location of a given landmark to predict the range-bearing measurement we could be getting \n",
+    "    To compute the Jacobian matrix $H$ of the measurement function $h$, we need the error between predicted measurement $\\hat{z}_t^i$ and the actual measurement $z_t^i$. We first define positional offset between the estimated landmark's location and estimated agent's location $\\delta$ as:\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "    \\delta\n",
+    "    &=\n",
+    "    \\begin{pmatrix}\n",
+    "        \\delta_x \\\\\n",
+    "        \\delta_y\n",
+    "    \\end{pmatrix}\n",
+    "    &=\n",
+    "    \\begin{pmatrix}\n",
+    "        \\bar{\\mu}_{j,x} - \\bar{\\mu}_{t,x} \\\\\n",
+    "        \\bar{\\mu}_{j,y} - \\bar{\\mu}_{t,y}\n",
+    "    \\end{pmatrix}\n",
+    "\\end{split}\n",
+    "$$\n",
+    "    and the squared distance $q$:\n",
+    "$$\n",
+    "q = \\delta^T \\delta\n",
+    "$$\n",
+    "    Given $\\delta$ and $q$, we can compute the simulated range-bearing measurement $\\hat{z}_t^i$: \n",
+    "$$\n",
+    "\\begin{split}\n",
+    "    \\hat{z}_t^i\n",
+    "    &=\n",
+    "    \\begin{pmatrix}\n",
+    "        r \\\\\n",
+    "        \\phi\n",
+    "    \\end{pmatrix}\n",
+    "    &=\n",
+    "    \\begin{pmatrix}\n",
+    "        \\sqrt{q} \\\\\n",
+    "        \\arctan{\\left( \\delta_y, \\delta_x \\right)} - \\bar{\\mu}_{t,\\theta}\n",
+    "    \\end{pmatrix}\n",
+    "\\end{split}\n",
+    "$$\n",
     "\n",
     "---\n",
     "\n",
