updated EKF derivation

--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -13,9 +13,13 @@
    "source": [
     "References:\n",
     "1. [Probabilistic Robotics](http://www.probabilistic-robotics.org/) book chapter 10.2 **SLAM with Extended Kalman Filters**.\n",
-    "2. Lecture notes of the [Robot Mapping class by Wolfram Burgard](http://ais.informatik.uni-freiburg.de/teaching/ws18/mapping/)\n",
-    "\n",
-    "---\n",
+    "2. Lecture notes of the [Robot Mapping class by Wolfram Burgard](http://ais.informatik.uni-freiburg.de/teaching/ws18/mapping/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this example, we used a simple 2D nonlinear dynamical system model. The state of the agent, $x$, is defined as:\n",
     "$$\n",
     "x = \n",
@@ -32,9 +36,13 @@
     "v & \\omega\n",
     "\\end{pmatrix}^T\n",
     "$$\n",
-    "where $v$ and $\\omega$ denotes forward and angular velocity, respectively.\n",
-    "\n",
-    "---\n",
+    "where $v$ and $\\omega$ denotes forward and angular velocity, respectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The (nonlinear) dynamics of motion model is given in the standard state-space form:\n",
     "$$\n",
     "x_t = Ax_{t-1} + Bu_t\n",
@@ -57,9 +65,13 @@
     "    0 & \\Delta t\n",
     "\\end{pmatrix}\n",
     "$$\n",
-    "is the state (or system) matrix and input matrix, respectively.\n",
-    "\n",
-    "---\n",
+    "is the state (or system) matrix and input matrix, respectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The fundation of the Kalman filter is Bayesian filter where the posterior belief will be updated by the likelihood and a prior belief. In the Kalman filter, the belief is represented by two variables $\\mu$ and $\\Sigma$ which denotes the first (mean) and second (covariance) moment of the probabilistic density representation of the system state. They are given by:\n",
     "\n",
     "$$\n",
@@ -77,9 +89,13 @@
     "    \\Sigma_{mx} & \\Sigma_{mm}\n",
     "\\end{pmatrix}\n",
     "$$\n",
-    "where $x$ and $m$ denotes the agent's state and landmakrs, respectively.\n",
-    "\n",
-    "---\n",
+    "where $x$ and $m$ denotes the agent's state and landmakrs, respectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The Kalman filter is a two step process. First we predict the new state based on our internal motion model. Then we update the predicted state and its covariance with the information brought by the new measurement and compute the best state estimation by weighting between predicted and inferred state according to the Kalman gain.\n",
     "\n",
     "1. Prediction step:\n",
@@ -137,6 +153,7 @@
     "g(u_t, y_{t-1}) \\approx g(u_t, \\mu_{t-1}) + G_t(y_{t-1} - \\mu_{t-1})\n",
     "$$\n",
     "    Prediction phase done!\n",
+    "\n",
     "2. Update step:\n",
     "    The Kalman gain $K_t$ balances between the prior information carried from the predicted state using motion model ($\\bar{\\mu}_t$) and the inferred state from the new measurements. Finally we computes the weighted average between the two quantities and use that to update the final state for return.\n",
     "    \n",
@@ -203,10 +220,13 @@
     "        \\arctan{\\left( \\delta_y, \\delta_x \\right)} - \\bar{\\mu}_{t,\\theta}\n",
     "    \\end{pmatrix}\n",
     "\\end{split}\n",
-    "$$\n",
-    "\n",
-    "---\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We define actual agent's state as $x$, and use $y$ to denote the combined feature:\n",
     "$$\n",
     "\\begin{split}\n",
@@ -226,9 +246,13 @@
     "\\end{pmatrix}\n",
     "\\end{split}\n",
     "$$\n",
-    "where $m$ denotes the landmarks observed so far and $N$ is the total number of landmarks.\n",
-    "\n",
-    "---\n",
+    "where $m$ denotes the landmarks observed so far and $N$ is the total number of landmarks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "F_{x,k} = \n",
     " \\begin{pmatrix}\n",
@@ -249,9 +273,13 @@
     "   \\delta_{k,y} & \\delta_{k,x} & -1 & -\\delta_{k,y} & -\\delta_{k,x}\n",
     "\\end{pmatrix}\n",
     "F_{x,k}\n",
-    "$$\n",
-    "\n",
-    "---\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Compute Kalman gain $K_t^i$:\n",
     "$$\n",
     "K_t^i = \\bar{\\Sigma}_t {H_t^i}^T \\left( H_t^i \\bar{\\Sigma}_t {H_t^i}^T + Q_t\\right)^{-1}\n",
