updated EKF derivation

--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -185,7 +185,7 @@
     "    The equation above provids a way to:    \n",
     "    1. either use actual range-bearing measurement $r$, $\\phi$ to imate the location of the corresponding the landmark or;\n",
     "    2. use current estimated location of a given landmark to predict the range-bearing measurement we could be getting \n",
-    "    To compute the Jacobian matrix $H$ of the measurement function $h$, we need the error between predicted measurement $\\hat{z}_t^i$ and the actual measurement $z_t^i$. We first define positional offset between the estimated landmark's location and estimated agent's location $\\delta$ as:\n",
+    "    To compute the Jacobian matrix $H$ of the observation function $h$, we need the error between predicted measurement $\\hat{z}_t^i$ and the actual measurement $z_t^i$. We first define positional offset between the estimated landmark's location and estimated agent's location $\\delta$ as:\n",
     "$$\n",
     "\\begin{split}\n",
     "    \\delta\n",
@@ -205,7 +205,7 @@
     "$$\n",
     "q = \\delta^T \\delta\n",
     "$$\n",
-    "    Given $\\delta$ and $q$, we can compute the simulated range-bearing measurement $\\hat{z}_t^i$: \n",
+    "    Given $\\delta$ and $q$, we can compute the predicted range-bearing measurement $\\hat{z}_t^i$: \n",
     "$$\n",
     "\\begin{split}\n",
     "    \\hat{z}_t^i\n",
@@ -220,6 +220,34 @@
     "        \\arctan{\\left( \\delta_y, \\delta_x \\right)} - \\bar{\\mu}_{t,\\theta}\n",
     "    \\end{pmatrix}\n",
     "\\end{split}\n",
+    "$$\n",
+    "    Now we have all we need to finally compute the Jacobian $H$ for the observation:\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "    H_t^i\n",
+    "    &=\n",
+    "    \\frac{\\partial h(\\bar{\\mu}_t^i)}{\\partial \\bar{\\mu}_t^i}\n",
+    "    &=\n",
+    "    \\frac{1}{q_i}\n",
+    "    \\begin{pmatrix}\n",
+    "        -\\sqrt{q_i}\\delta_x^i & -\\sqrt{q_i}\\delta_y^i & 0 & \\sqrt{q_i}\\delta_x^i & \\sqrt{q_i}\\delta_y^i \\\\\n",
+    "        \\delta_y^i & -\\delta_x^i & -q_i & -\\delta_y^i & \\delta_x^i\n",
+    "    \\end{pmatrix}\n",
+    "    F_{x,i}\n",
+    "\\end{split}\n",
+    "$$\n",
+    "    where $F_{x,i}$ is an utility matrix that helps map the lower dimension matrix on the left-hand-side into the higher dimension state space:\n",
+    "$$\n",
+    "F_{x,i} = \n",
+    " \\begin{pmatrix}\n",
+    "  1&0&0 & & 0\\cdots0 & & 0&0&0 & & 0\\cdots0 \\\\\n",
+    "  0&1&0 & & 0\\cdots0 & & 0&0&0 & & 0\\cdots0 \\\\\n",
+    "  0&0&1 & & 0\\cdots0 & & 0&0&0 & & 0\\cdots0 \\\\\n",
+    "  \\\\\n",
+    "  0&0&0 & & 0\\cdots0 & & 1&0&0 & & 0\\cdots0 \\\\\n",
+    "  0&0&0 & & 0\\cdots0 & & 0&1&0 & & 0\\cdots0 \\\\\n",
+    "  0&0&0 & & 0\\cdots0 & & 0&0&1 & & 0\\cdots0 \\\\\n",
+    " \\end{pmatrix}\n",
     "$$"
    ]
   },
