--- a/Python/UKF_SLAM.ipynb
+++ b/Python/UKF_SLAM.ipynb
@@ -1751,10 +1751,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "covar.diagonal().item(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class SigmaPoints():\n",
+    "    def __init__(self, n_dim, kappa=3, alpha=0.25, beta=2):\n",
+    "        self.n_dim = n_dim\n",
+    "        self.n_sigma_points = 2 * n_dim + 1\n",
+    "        self.kappa = kappa\n",
+    "        self.alpha = alpha\n",
+    "        self.beta = beta\n",
+    "        self.lmda = self.alpha**2 * (n_dim + self.kappa) - n_dim\n",
+    "        \n",
+    "    def from_mu_covar(self, mu, covar):  \n",
+    "        self.sigma_pts = np.empty([self.n_sigma_points, self.n_dim])\n",
+    "        self.wm = np.empty([self.n_sigma_points]) # weight for mean (1st moment)\n",
+    "        self.wc = np.empty([self.n_sigma_points]) # weight for covariance (2nd moment)\n",
+    "        self.sigma_pts[0, :] = mu\n",
+    "        self.wm[0] = self.lmda / (self.n_dim + self.lmda)\n",
+    "        self.wc[0] = self.wm[0] + 1 - self.alpha**2 + self.beta\n",
+    "\n",
+    "        # Compute Sigma points\n",
+    "        for i in range(self.n_dim):\n",
+    "            rhs = np.sqrt( (self.n_dim + self.lmda) * covar)\n",
+    "            rhs = np.array(rhs.diagonal())\n",
+    "            if i > 0: rhs[i-1] = -rhs[i-1]\n",
+    "            # Sigma points\n",
+    "            self.sigma_pts[2*i+1, :] = mu + rhs\n",
+    "            self.sigma_pts[2*i+2, :] = mu - rhs\n",
+    "            # weight for mean\n",
+    "            w = 1 / (2 * (self.n_dim + self.lmda))\n",
+    "            self.wm[2*i+1] = self.wm[2*i+2] = self.wc[2*i+1] = self.wm[2*i+2] = w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.        ,  0.        ],\n",
+       "       [ 0.4330127 ,  0.30618622],\n",
+       "       [-0.4330127 , -0.30618622],\n",
+       "       [-0.4330127 , -0.30618622],\n",
+       "       [ 0.4330127 ,  0.30618622]])"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp = SigmaPoints(2)\n",
+    "sp.from_mu_covar([0,0], covar)"
+   ]
   }
  ],
  "metadata": {
