reformated EKF text

--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -99,6 +99,7 @@
     "The Kalman filter is a two step process. First we predict the new state based on our internal motion model. Then we update the predicted state and its covariance with the information brought by the new measurement and compute the best state estimation by weighting between predicted and inferred state according to the Kalman gain.\n",
     "\n",
     "1. Prediction step:\n",
+    "\n",
     "$$\n",
     "\\begin{split}\n",
     "    \\bar{\\mu}_t &= g(u_t, \\mu_{t-1}) \\\\\n",
@@ -122,7 +123,8 @@
     "    \\end{pmatrix}    \n",
     "\\end{split}\n",
     "$$\n",
-    "    where\n",
+    "    where \n",
+    "        \n",
     "$$\n",
     "F_x = \n",
     " \\begin{pmatrix}\n",
@@ -132,10 +134,12 @@
     " \\end{pmatrix}\n",
     "$$\n",
     "    is an utility matrix that helps map matrices to the same shape as $\\mu$\n",
+    "    \n",
     "$$\n",
     "\\bar{\\Sigma}_t = G_t \\Sigma_{t-1} G_t^T + F_x^T R_t^x F_x\n",
     "$$\n",
     "    where \n",
+    "    \n",
     "$$\n",
     "\\begin{split}\n",
     "G_t &= \\frac{\\partial}{\\partial x} g(u_t, x_t) \\\\\n",
@@ -145,19 +149,20 @@
     "\\end{split}\n",
     "$$\n",
     "    is the Jacobian of the (non-linear) motion function, and\n",
+    "\n",
     "$$\n",
     "g_t = \\frac{\\partial}{\\partial x} \\left( B_t u_t \\right)\n",
     "$$\n",
     "    is one of the two nonlinear functions $g(u_t, x_{t-1})$ and $h(x_t)$ locally linearized through first-order Taylor expansion:\n",
+    "    \n",
     "$$\n",
     "g(u_t, y_{t-1}) \\approx g(u_t, \\mu_{t-1}) + G_t(y_{t-1} - \\mu_{t-1})\n",
     "$$\n",
     "    Prediction phase done!\n",
     "\n",
     "2. Update step:\n",
-    "    The Kalman gain $K_t$ balances between the prior information carried from the predicted state using motion model ($\\bar{\\mu}_t$) and the inferred state from the new measurements. Finally we computes the weighted average between the two quantities and use that to update the final state for return.\n",
-    "    \n",
-    "    The range-bearing observation from the sensor is represented by:\n",
+    "    The Kalman gain $K_t$ balances between the prior information carried from the predicted state using motion model ($\\bar{\\mu}_t$) and the inferred state from the new measurements. Finally we computes the weighted average between the two quantities and use that to update the final state for return.   \n",
+    "    The range-bearing observation from the sensor is represented by:   \n",
     "$$\n",
     "z_t^i = \n",
     "\\begin{pmatrix}\n",
@@ -166,6 +171,7 @@
     "\\end{pmatrix}\n",
     "$$\n",
     "    where $z_t^i$ denotes sensor's $i$-th measurement at time $t$ and $r, \\phi$ is the range-bearing observation. When we see a new landmark that has never been observed before, we will use the range-bearing observation and our current state estimate to compute an estimated landmark location $\\bar{\\mu}_j$. If the landmark has been observed before, we will use our current estimate of the landmark $j$'s location $\\bar{\\mu}_j$ and agent's location $\\bar{\\mu}_t$ stored in the state matrix $x$ to compute the expected range-bearing observation at time $t$ for landmark $i$: $z_t^i$.\n",
+    "    \n",
     "$$\n",
     "\\begin{pmatrix}\n",
     "    \\bar{\\mu}_{j,x} \\\\\n",
@@ -182,10 +188,11 @@
     "    r_t^i \\sin{\\left( \\phi_t^i +\\bar{\\mu}_{t, \\theta} \\right)}\n",
     "\\end{pmatrix}\n",
     "$$\n",
-    "    The equation above provids a way to:    \n",
-    "    1. either use actual range-bearing measurement $r$, $\\phi$ to imate the location of the corresponding the landmark or;\n",
-    "    2. use current estimated location of a given landmark to predict the range-bearing measurement we could be getting \n",
-    "    To compute the Jacobian matrix $H$ of the observation function $h$, we need the error between predicted measurement $\\hat{z}_t^i$ and the actual measurement $z_t^i$. We first define positional offset between the estimated landmark's location and estimated agent's location $\\delta$ as:\n",
+    "    The equation above provids a way to:  \n",
+    "- either use actual range-bearing measurement $r$, $\\phi$ to imate the location of the corresponding the landmark or;\n",
+    "- use current estimated location of a given landmark to predict the range-bearing measurement we could be getting \n",
+    "    \n",
+    "    To compute the Jacobian matrix $H$ of the observation function $h$, we need the error between predicted measurement $\\hat{z}_t^i$ and the actual measurement $z_t^i$. We first define positional offset between the estimated landmark's location and estimated agent's location $\\delta$ as:   \n",
     "$$\n",
     "\\begin{split}\n",
     "    \\delta\n",
@@ -202,10 +209,12 @@
     "\\end{split}\n",
     "$$\n",
     "    and the squared distance $q$:\n",
+    "   \n",
     "$$\n",
     "q = \\delta^T \\delta\n",
     "$$\n",
     "    Given $\\delta$ and $q$, we can compute the predicted range-bearing measurement $\\hat{z}_t^i$: \n",
+    "    \n",
     "$$\n",
     "\\begin{split}\n",
     "    \\hat{z}_t^i\n",
@@ -222,6 +231,7 @@
     "\\end{split}\n",
     "$$\n",
     "    Now we have all we need to finally compute the Jacobian $H$ for the observation:\n",
+    "    \n",
     "$$\n",
     "\\begin{split}\n",
     "    H_t^i\n",
@@ -237,6 +247,7 @@
     "\\end{split}\n",
     "$$\n",
     "    where $F_{x,i}$ is an utility matrix that helps map the lower dimension matrix on the left-hand-side into the higher dimension state space:\n",
+    "    \n",
     "$$\n",
     "F_{x,i} = \n",
     " \\begin{pmatrix}\n",
@@ -349,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +373,7 @@
     "    ndim_state = 3    # state dimension [x, y, yaw]\n",
     "    ndim_landmark = 2 # Landmark state dimension [x, y]\n",
     "    sensor_max_range = 10.0 # maximum observation range of the simulated sensor\n",
-    "    m_dist_threshold = 2  # Threshold of Mahalanobis distance for data association.\n",
+    "    m_dist_threshold = 3  # Threshold of Mahalanobis distance for data association.\n",
     "\n",
     "    # EKF state covariance\n",
     "    R_t = np.diag([0.5, 0.5, np.deg2rad(30.0)])**2\n",
