--- a/Python/UKF_SLAM.ipynb
+++ b/Python/UKF_SLAM.ipynb
@@ -895,11 +895,12 @@
     "            w = 1 / (2 * (self.n_dim + self.lmda))\n",
     "            self.wm[2*i+1] = self.wm[2*i+2] = self.wc[2*i+1] = self.wm[2*i+2] = w\n",
     "            \n",
-    "    def get_bounding_ellipse(self):\n",
+    "    def get_bounding_ellipse(self, line_width=4, color='r'):\n",
     "        # return axis length for the 95% CI bounding ellipse\n",
     "        v = np.linalg.eigvals(self.covar)\n",
     "        v = np.apply_along_axis(lambda x: np.sqrt(5.991*x), 0, v)\n",
-    "        return v"
+    "        he = Ellipse(self.mu, width=v[0], height=v[1], fill=False, linewidth=line_width, color=color)\n",
+    "        return he"
    ]
   },
   {
@@ -1703,11 +1704,10 @@
    "source": [
     "sp = SigmaPoints(2)\n",
     "sp.from_mu_covar([0,0], covar)\n",
-    "v = sp.get_bounding_ellipse()\n",
+    "he = sp.get_bounding_ellipse()\n",
     "\n",
     "# visualize\n",
     "fig, ax = plt.subplots()\n",
-    "he = Ellipse([0,0], width=v[0], height=v[1], fill=False, linewidth=4, color='r')\n",
     "ax.add_artist(he)\n",
     "plt.plot(sigma_pts[:, 0], sigma_pts[:, 1], 'x')\n",
     "\n",
