--- a/Python/UKF_SLAM.ipynb
+++ b/Python/UKF_SLAM.ipynb
@@ -920,8 +920,9 @@
     "    @classmethod\n",
     "    def get_bounding_ellipse(self, line_width=2, color='r'):\n",
     "        # return axis length for the 95% CI bounding ellipse\n",
-    "        v = np.linalg.eigvals(self.covar)\n",
+    "        v, vec = np.linalg.eig(self.covar)\n",
     "        v = np.apply_along_axis(lambda x: np.sqrt(5.991*x), 0, v)\n",
+    "        angle = vec[0, :]\n",
     "        he = Ellipse(self.mu, width=v[0], height=v[1], fill=False, linewidth=line_width, color=color)\n",
     "        return he\n",
     "    \n",
